Attempt to fix overflow issues

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 #wrapper {
-  position: absolute;
+  position: relative;
   overflow-x: hidden;
 }
 
